# OOP-CPP

./: README.md
Task_1/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  conanfile.txt
Task_1/compressor/: CMakeLists.txt
Task_1/compressor/src/: compressor.cpp
Task_1/libcompressor/: CMakeLists.txt
Task_1/libcompressor/include/libcompressor/: libcompressor.hpp
Task_1/libcompressor/src/: libcompressor.cpp
Task_1/libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
